--- a/server_serial_port/Gemfile
+++ b/server_serial_port/Gemfile
@@ -38,12 +38,9 @@ gem "binding_of_caller"
 
 gem 'twitter-bootstrap-rails'
 
-gem 'rmagick', '2.13.2', :git=>'http://github.com/rmagick/rmagick.git'
+gem 'rmagick'
 
-group :doc do
-  # bundle exec rake doc:rails generates the API under doc/api.
-  gem 'sdoc', require: false
-end
+
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
