--- a/server_serial_port/Gemfile
+++ b/server_serial_port/Gemfile
@@ -40,6 +40,11 @@ gem 'twitter-bootstrap-rails'
 
 gem 'rmagick'
 
+#Upload photo to book register
+gem "paperclip", "~> 4.1"
+
+# SSIM Algorithm
+
 
 
 # Use ActiveModel has_secure_password
